# CircuitPython_TouchPIO

./: .gitignore  README.rst  pyproject.toml  requirements.txt  ruff.toml  touchpio.py
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: touchpio_mulit_simpletest.py  touchpio_simpletest.py  touchpio_touchin_many.py
touchpio/: __init__.py  touchin.py  touchin_multi.py
